<resources>
    <string name="app_name">JAWLA</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="check_new_order_s">Check New Order\'s</string>
    <string name="start">Start</string>
    <string name="welcome">Welcome</string>
    <string name="join_now">Join Now</string>
    <string name="already_have_an_account_login">Already have an Account? Login</string>
    <string name="product_name">Product Name...</string>
    <string name="product_description">Product Description...</string>
    <string name="product_price">Product Price...</string>
    <string name="add_product">Add Product...</string>
    <string name="maintain_button">Maintain Button</string>
    <string name="check_order_s">Check Order\'s</string>
    <string name="logout">Logout</string>
    <string name="add_new_product">Add New Product</string>
    <string name="hey_hungry">Hey Hungry!</string>
    <string name="let_s_find_some_food_for_you">Let\'s find some food for you!</string>
    <!--    <string name="todo">TODO</string>-->
    <!--    <string name="todo">TODO</string>-->
    <string name="todo">TODO</string>
    <string name="Next" />
    <string name="next">Next</string>
    <string name="message">Message</string>
    <string name="send_to_admin">Send to Admin</string>
    <string name="phone">Phone</string>
    <string name="pay_bill_by_jazz_cash">Pay Bill by Jazz Cash</string>
    <string name="confirm">Confirm</string>
    <string name="congratulation_your_order_has_been_placed_successfully_soon_it_will_verify">Congratulation your Order has been placed Successfully. Soon it will verify.</string>
    <!--    <string name="default_web_client_id" />-->

</resources>
