<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_bg"
    android:alpha="1"
    tools:context=".AdminAddNewProductActivity">


<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="250dp"
    android:id="@+id/ss"
    android:layout_margin="20dp"

    >
    <ImageView
        android:id="@+id/select_product_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerInside"

        android:src="@drawable/foodiesicon"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/todo" />
</RelativeLayout>



    <EditText
        android:id="@+id/product_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ss"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="27dp"
        android:layout_marginRight="45dp"
        android:autofillHints=""
        android:background="@drawable/et_input_with_border_pay"
        android:hint="@string/product_name"
        android:inputType="textMultiLine"
        android:padding="20dp"
        android:textColor="#000000"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/product_description"
        android:layout_width="324dp"
        android:layout_height="83dp"
        android:layout_below="@+id/product_name"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="45dp"
        android:autofillHints=""
        android:background="@drawable/et_input_with_border_pay"
        android:hint="@string/product_description"
        android:inputType="textMultiLine"
        android:padding="20dp"
        android:textColor="#000000"

        android:textSize="15sp" />

    <EditText
        android:id="@+id/product_price"
        android:layout_width="316dp"
        android:layout_height="51dp"
        android:layout_below="@+id/product_description"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="26dp"
        android:layout_marginRight="45dp"
        android:autofillHints=""
        android:background="@drawable/et_input_with_border_pay"
        android:hint="@string/product_price"
        android:gravity="center"
        android:inputType="textMultiLine"
        android:padding="10dp"
        android:textColor="#000000"

        android:textSize="20sp" />

    <Button
        android:id="@+id/add_new_product"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/product_price"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="18dp"
        android:layout_marginRight="45dp"
        android:background="@drawable/round_blue_bg_8"
        android:padding="15dp"
        android:text="@string/add_product"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:fontFamily="sans-serif-smallcaps"

        />

</RelativeLayout>