<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_bg"
    tools:context=".FeedbackActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="633dp"
        android:layout_marginTop="50dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:gravity="center"
            android:text="Feedback"
            android:fontFamily="sans-serif-smallcaps"
            android:textColor="#2979FF"
            android:textSize="40sp" />


        <EditText
            android:id="@+id/textView"
            android:layout_width="329dp"
            android:layout_height="58dp"
            android:layout_marginTop="70dp"
            android:layout_gravity="center"
            android:background="@drawable/white_rect"
            android:hint="Name"
            android:fontFamily="sans-serif-smallcaps"

            android:textAlignment="center"
            android:textColor="@color/yellow_green"
            android:textColorHint="#949494"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/textView2"
            android:layout_width="329dp"
            android:layout_height="58dp"
            android:layout_below="@+id/textView"
            android:layout_gravity="center"
            android:layout_marginTop="13dp"
            android:background="@drawable/white_rect"
            android:hint="Email"
            android:inputType="textEmailAddress"
            android:textAlignment="center"
            android:textColor="@color/yellow_green"
            android:textColorHint="#949494"
            android:fontFamily="sans-serif-smallcaps"

            android:textSize="20sp" />

        <EditText
            android:id="@+id/textView3"
            android:layout_width="326dp"
            android:layout_height="55dp"
            android:layout_below="@+id/textView2"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/white_rect"
            android:hint="@string/message"
            android:textAlignment="center"
            android:textColor="@color/yellow_green"
            android:textColorHint="#949494"
            android:fontFamily="sans-serif-smallcaps"

            android:textSize="20sp" />

        <EditText
            android:id="@+id/textView4"
            android:layout_width="326dp"
            android:layout_height="60dp"
            android:layout_below="@+id/textView3"
            android:layout_gravity="center"
            android:layout_marginTop="6dp"
            android:background="@drawable/white_rect"
            android:hint="@string/phone"
            android:inputType="phone"
            android:textAlignment="center"
            android:fontFamily="sans-serif-smallcaps"
            android:textColor="@color/yellow_green"
            android:textColorHint="#949494"
            android:textSize="20sp" />

        <Button
            android:id="@+id/buttonsend"
            android:layout_width="222dp"
            android:layout_height="66dp"
            android:layout_below="@id/textView4"
            android:layout_marginTop="30dp"
            android:background="@drawable/round_blue_bg_8"
            android:text="@string/send_to_admin"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-smallcaps" />

        <Button
            android:id="@+id/buttondetails"
            android:layout_width="252dp"
            android:layout_height="64dp"
            android:layout_below="@+id/buttonsend"
            android:layout_gravity="center"
            android:layout_marginTop="34dp"
            android:background="@drawable/et_input_with_border_pay"
            android:enabled="false"
            android:textAllCaps="false"
            android:fontFamily="sans-serif-smallcaps"
            android:text="View Sended Detail's"
            android:textColor="@color/Dark"
            android:textSize="23sp" />


    </LinearLayout>
</RelativeLayout>